--- a/TomTelegramBot.csproj
+++ b/TomTelegramBot.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.4" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.113.5" />
       <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.5" />
