--- a/TomTelegramBot.csproj
+++ b/TomTelegramBot.csproj
@@ -9,8 +9,9 @@
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="SQLite.Interop.dll" Version="1.0.103" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.113.5" />
-      <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.5" />
+      <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.6" />
       <PackageReference Include="System.Data.SQLite.Core.MSIL" Version="1.0.113" />
       <PackageReference Include="System.Data.SQLite.EF6" Version="1.0.113" />
       <PackageReference Include="System.Data.SQLite.Linq" Version="1.0.113" />
